Fix brands slider not rendering on Safari (#177)

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1565,6 +1565,9 @@ body.base {
       flex-direction: column;
       gap: var(--gap-items);
     }
+    .brands-scroll-container {
+      flex-basis: auto;
+    }
   }
 
   h2 {
@@ -1619,6 +1622,7 @@ body.base {
 
   .brands-scroll {
     display: flex;
+    width: -webkit-max-content;
     width: max-content;
     animation: scroll-brands 40s linear infinite;
 
